--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.cvelez.photos">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:name="com.cvelez.photos.application.CustomApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_gallery_background"
+        android:icon="@mipmap/ic_gallery"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_gallery_round"
         android:supportsRtl="true"
